fix z-index

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -11,7 +11,7 @@
   row-gap: var(--gutter);
   align-content: center;
   align-items: start;
-  z-index: z-index(modal);
+  z-index: z-index(background);
 
   @media (--tablet-up) {
     align-content: space-evenly;
